# vulkan_project

./: CMakeLists.txt
dep/GLFW/lib/: glfw3.lib
dep/GLFW/lib/pkgconfig/: glfw3.pc
dep/tinyobjloader/lib/: tinyobjloader.lib
dep/tinyobjloader/lib/pkgconfig/: tinyobjloader.pc
prj/project_1/: main.cpp
src/: vklib_app.cpp  vklib_app.h
vulkan_lib/: CMakeLists.txt  vkPhysicalSelector.cpp  vkPhysicalSelector.h  vkfile.cpp  vkfile.h  vklib.cpp  vklib.h  vklibLogger.h  vklibMesh.cpp  vklibMesh.h  vklib_require.h  vkshader.cpp  vkshader.h
vulkan_lib/assets/shaders/: project_1.vert
